--- a/styles/base.css
+++ b/styles/base.css
@@ -38,9 +38,73 @@ h2 {
     text-align: left;
     font-family: 'Fredoka One', cursive, sans-serif;
 }
+ /* Style for the navigation menu */
+ ul.nav-menu {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    background-color: black;
+    border-radius: 0; 
+
+}
+
+ul.nav-menu li {
+    display: block; 
+    margin-bottom: 10px; 
+}
+
+ul.nav-menu li a {
+    text-decoration: none;
+    color: white;
+    padding: 8px 16px;
+    display: block; 
+}
+
+ul.nav-menu li a:hover {
+    background-color: #555;
+}
+.container {
+    background-color: royalblue;
+    color: white;
+    padding: 20px;
+    border-radius: 5px;
+    margin: 20px;
+    max-width: 550px;
+    margin: 0 auto;
+}
+
+.container h3 {
+    margin-top: 10;
+}
+
+.card {
+    padding: 10px;
+    
+}
+
+h3 {
+    color: #333;
+    font-size: 1.5rem;
+}
 
 ul {
+    list-style-type: none;
+    padding: 0;
     font-family: 'Fredoka One', cursive, sans-serif;
+}
+
+li {
+    margin: 8px 0;
+}
+
+a {
+    text-decoration: none;
+    color: #0074d9;
+}
+
+p {
+    margin: 8px 0;
+    font-size: 1rem;
 }
 
 #last {
