--- a/Lesson 2/styles/design.css
+++ b/Lesson 2/styles/design.css
@@ -20,11 +20,11 @@ h1 {
 
 main {
 	display: grid;
+	grid-template-columns: 1fr 1fr;
 }
 
 h2 {
 	color: navy;
-	text-align: center;
     text-align: left;
 }
 
@@ -35,7 +35,9 @@ article p {
 .callout {
 	color: #777;
 	background-color: #702963;
-    padding: 20px;
+	padding: 1rem;
+	grid-row: 3/4;
+	grid-column: 1/3;
 }
 
 footer {
@@ -43,4 +45,13 @@ footer {
 	border-top: 1px solid rgba(0, 0, 0, 0.1);
 	font-size: smaller;
 	text-align: right;
+}
+main section:nth-of-type(1) {
+    grid-row: 2/3;
+	grid-column: 2/3;
+}
+
+main section:nth-of-type(2) {
+    grid-row: 2/3;
+	grid-column: 1/2;
 }
