--- a/Lesson 2/styles/design.css
+++ b/Lesson 2/styles/design.css
@@ -1,6 +1,8 @@
 body {
 	font-family: Roboto, helvetica, sans-serif;
 	margin: 0;
+	padding: 0;
+
 }
 
 header,
@@ -8,6 +10,7 @@ main,
 footer {
 	max-width: 760px;
 	margin: 0 auto;
+	padding: 0;
 }
 
 marquee {
