--- a/styles/base.css
+++ b/styles/base.css
@@ -120,7 +120,7 @@ p {
     margin: 0px;
     margin-top: 50px;
     padding: 20px;
-    border-radius: 10px 10px 10px 10px;
+    /* border-radius: 10px 10px 10px 10px; */
     color: seashell;
 }
 
