--- a/lesson3/styles/style.css
+++ b/lesson3/styles/style.css
@@ -20,7 +20,7 @@ nav a:hover {
 
 h2,
 h3 {
-    color: #247BA0;
+    color: #262829;
     font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
@@ -33,9 +33,9 @@ nav {
 
 nav a {
     display: block;
-    color: #247BA0;
+    color: #414344;
     text-align: center;
-    padding: 15px;
+    padding: 20px;
     text-decoration: none;
     font-size: 1.2rem;
 }
@@ -51,13 +51,13 @@ nav div {
 .link5 {
     text-decoration: none;
     padding: 10px;
-    color: #247BA0;
+    color: #16181a;
 }
 
 body {
-    background-color: #F9F7F3;
-    font-family: dongle;
-    font-size: 25px;
+    background-color: #e29714;
+    font-family: 'Dongle', Times, serif;
+    font-size: 35px;
 }
 
 footer {
@@ -65,9 +65,8 @@ footer {
     padding: 1rem;
     justify-content: space-between;
     font-weight: 700;
-    color: #537D8D;
+    color: #262829;
 }
-
 
 /***********************************************/
 
