--- a/lesson3/styles/normalize.css
+++ b/lesson3/styles/normalize.css
@@ -236,9 +236,7 @@ select {
 button,
 [type="button"],
 [type="reset"],
-[type="submit"] {
-    -webkit-appearance: button;
-}
+[type="submit"] 
 
 
 /**
@@ -345,12 +343,7 @@ textarea {
    * 2. Correct the outline style in Safari.
    */
 
-[type="search"] {
-    -webkit-appearance: textfield;
-    /* 1 */
-    outline-offset: -2px;
-    /* 2 */
-}
+[type="search"] 
 
 
 /**
