--- a/Lesson2/styles/medium.css
+++ b/Lesson2/styles/medium.css
@@ -1,20 +1,13 @@
-
-
-/* Default styles for your design principles cards */
-main {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-gap: 20px;
-}
+/* medium.css */
 
 /* Media query for medium screens (min-width: 768px) */
-@media only screen and (min-width: 768px) {
+@media only screen and (max-width: 750px)  {
   main {
     grid-template-columns: repeat(2, 1fr);
   }
 
   /* Select the last two cards and move them to the second row */
-  .grid-item:nth-last-child(-n+2) {
-    grid-row: 2;
+  section:nth-child(3) {
+    grid-column: 1 / 3;
   }
 }
