--- a/styles/base.css
+++ b/styles/base.css
@@ -16,18 +16,7 @@ ul.nav-menu,
     padding: 0;
 }
 
-.google-map{
-    padding-bottom: 50%;
-    position: relative;
-}
 
-.google-map iframe{
-    height: 100%;
-    width: 100%;
-    left: 0;
-    top: 0;
-    position: absolute;
-}
 
 header {
     display: grid;
@@ -53,6 +42,10 @@ h1 {
 h2 {
     font-family: 'Fredoka One', Georgia, sans-serif;
     text-align: left;
+}
+
+main h2{
+    background-color: #fff;
 }
 /* small view navigation */
 #menu {
@@ -87,7 +80,7 @@ h2 {
 }
 
 .stuff {
-	margin: .5m;
+    margin: .5m;
 	border: 1px solid rgba(0,0,0,.1);
 	background-color: #bed;
 	max-width: 580px;
@@ -101,11 +94,19 @@ h2 {
 
 /* large view navigation ************************************/
 /* Large screens */
-@media (min-width: 37.5em) {
+@media screen and (min-width: 37.5em) {
     /* Add specific styles for large screens here */
+    main{
+        display: grid;
+        grid-template-columns: 70% 30%;
+    }
+    
+    main h2{
+        grid-column: 1 / 3;
+    }
 }
-
-h1 {
+    
+    h1 {
     font-size: 2.5rem;
     margin-left: 0;
     text-align: center;
@@ -139,7 +140,7 @@ h2 {
 }
  /* Style for the navigation menu */
  ul.nav-menu {
-    list-style-type: none;
+     list-style-type: none;
     padding: 5px;
     background-color: black;
     border-radius: 0; 
@@ -165,15 +166,15 @@ ul.nav-menu li a:hover {
     background-color: #555;
 }
 .container {
-    background-color: royalblue;
-    color: white;
+    background-color:royalblue;
+    color: rgb(240, 236, 236);
     padding: 20px;
     border-radius: 5px;
     /* margin: 20px 0;  */
 }
 .container-2 {
     background-color: royalblue;
-    color: white;
+    color: rgb(241, 236, 236);
     padding: 20px;
     border-radius: 5px;
     /* margin: 20px 0;  */
@@ -184,13 +185,13 @@ ul.nav-menu li a:hover {
 }
 
 .card {
-display: block;
-width: auto;
-height:auto;
-padding:10px;
-border: 2px solid;
-margin:20px;
-
+    display: block;
+    width: auto;
+    height:auto;
+    padding:10px;
+    border: 2px solid;
+    margin:20px;
+    
 }
 .card-2 {
     display: block;
@@ -200,6 +201,7 @@ margin:20px;
     border: 2px solid;
     margin:20px;
 }
+
 
 h3 {
     color: white;
@@ -236,6 +238,18 @@ p {
 #demo {
     text-align: center;
     font-family: 'Fredoka One', cursive, sans-serif;
+}
+.google-map{
+    padding-bottom: 70%;
+    position: relative;
+}
+
+.google-map iframe{
+    height: 100%;
+    width: 100%;
+    left: 0;
+    top: 0;
+    position: absolute;
 }
 
 .footer {
