--- a/lesson5/style/base.css
+++ b/lesson5/style/base.css
@@ -1,77 +1,69 @@
-@import url("https://fonts.googleapis.com/css2?family=Acme&display=swap");
-
 * {
-    margin: 0;
-    padding: 0;
+	margin: 0;
+	padding: 0;
 }
 
 body {
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    font-size: 18px;
-    font-family: Acme, Arial, sans-serif;
+	height: 100vh;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	font-family: Acme, Arial, sans-serif;
 }
 
 h1 {
-    font-size: 1.5rem;
+	font-size: 1.5rem;
 }
 
 main {
-    margin: 0.5rem auto;
-    border: 1px solid rgba(0, 0, 0, 0.2);
-    padding: 0.5rem;
-    background-color: #bed;
-    display: grid;
-    grid-template-columns: 1fr;
-    width: 95%;
+	margin: 1rem auto;
+	border: 1px solid rgba(0, 0, 0, 0.1);
+	padding: 1rem;
+	background-color: #aabbac;
+	display: flex;
+	flex-direction: column;
 }
 
 input,
 button {
-    padding: 0.35rem;
-    margin-left: 1rem;
-    font-size: 1.1rem;
+	padding: 0.5rem;
 }
 
-input {
-    width: 200px;
+button {
+	margin: 0.5rem;
 }
 
-label {
-    font-size: 0.9rem;
+.delete {
+	width: fit-content;
 }
 
-.listcontainer {
-    border: 1px solid rgba(0, 0, 0, 0.2);
-    margin: 1rem;
-    padding: 1rem;
+.input {
+	display: flex;
+	gap: 1rem;
 }
 
 .list {
-    margin: 0.2rem;
+	padding: 0.5rem;
 }
 
 ul {
-    margin: 1rem;
-    list-style: none;
+	margin: 1rem;
+	list-style: none;
 }
 
 li {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin-bottom: 0.5rem;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
 }
 
 @media only screen and (min-width: 32.5em) {
-    h1 {
-        font-size: 2rem;
-    }
+	h1 {
+		font-size: 2rem;
+	}
 
-    main {
-        width: 480px;
-    }
+	main {
+		width: 320px;
+	}
 }
