--- a/Chamber/styles/base.css
+++ b/Chamber/styles/base.css
@@ -425,4 +425,34 @@ footer .last-visit{
     filter: blur(0px);
     transform:translateY(0rem);
 }
+/* Discover */
+.discover-intro{
+    grid-column: 1/-1;
+}
+.main-area{display: grid;}
+main #gallery, .main-area{
+    grid-column: 1/-1;
+    grid-row: 1/-1;
+}
+
+main #gallery{
+    justify-self: center;
+    align-items: center;
+    max-width: 100vw;
+    display: grid;
+    grid-template-columns: 1fr;
+    padding: 1rem;
+    
+}
+#gallery .photo{
+    width: 100%;
+    display: grid;
+    grid-template-columns: 1fr;
+    justify-items: center;
+    transition: all 0.2s;
+}
+
+#gallery .photo .info{
+    padding: 1rem;
+}
 
