--- a/Chamber/styles/large.css
+++ b/Chamber/styles/large.css
@@ -141,4 +141,30 @@
         }
 
     /* //////////////////////////////////////////// */
+    /* DISCOVER PAGE */
+    
+
+    #gallery .photo:hover{
+        padding-left: 2rem;
+        box-shadow: 0px 0px 10px #010d14;
+    }
+    #gallery .photo{
+        grid-template-columns: 1fr 1fr;
+    }
+    #gallery .photo .right-img{
+        grid-column: 2/3;
+        grid-row:1/2;
+    }
+    main #gallery{
+        max-width: 80vw; 
+    }
+
+    #gallery .photo .left-text{
+        padding: 10px;
+        grid-column: 1/2;
+        grid-row:1/2;
+    }
+    #gallery .photo .info{
+        padding: 2rem;
+    }
 }
